API is working and created some unit tests
