# api/controllers/user.js
@@ -1,10 +1,12 @@
 'use strict';
+
 class User {
     constructor(id, username, password) {
         this.username = username;
         this.password = password;
         this.ID = id;
         this.SessionID = undefined;
+        this.queue = [];
     }
   
     getUsername() {
@@ -18,14 +20,34 @@ class User {
     getId() {
         return this.ID;
     }
+    addToQueue(video){
+        this.queue.push(video);
+    }
+    getQueue(){
+        return this.queue;
+    }
 }
 
 class UserRepository {
     constructor(){
         this.users = [];
+        this.activeSessionIds = [];
     }
-    getAll(){
+    getUsers(){
         return this.users;
+    }
+    getUserBySessionId(sessionID){
+        return this.users.filter(user => user.sessionID == sessionID)[0];
+    }
+    getActiveSessionIds(){
+        return this.activeSessionIds;
+    }
+    addActiveSessionId(sessionId){
+        this.activeSessionIds.push(sessionId);
+    }
+    deleteActiveSessionId(sessionId){
+        let index = this.activeSessionIds.findIndex(id => id == sessionId);
+        this.activeSessionIds.splice(index, 1);
     }
     add(user){
         this.users.push(user);
@@ -53,22 +75,31 @@ class UserRepository {
 }
 let userRepo = new UserRepository();
 module.exports = {
-  createUser: createUser,
-  logoutUser: logoutUser,
-  loginUser: loginUser
+    userRepo: userRepo,
+    createUser: createUser,
+    logoutUser: logoutUser,
+    loginUser: loginUser,
 };
 
 function createUser(req, res) {
-  let body = req.swagger.params.body["value"];
-  let user = new User(body.id,body.username,body.password);
-  userRepo.add(user);
-  res.json(user);
+    let body = req.swagger.params.body["value"];
+    let user = new User(body.id, body.username, body.password);
+    userRepo.add(user);
+    res.json(user);
 }
-
 function logoutUser(req, res) {
-    res.json({"message": "kutya"});
+    let response;
+    let user = userRepo.getUserBySessionId(parseInt(req.swagger.params.sessionId.value));
+    if(user == undefined){
+        response = ({"message":"Logout failed, Invalid session ID"})
+    }
+    else{
+        userRepo.deleteActiveSessionId(user.sessionID);
+        user.sessionID = undefined;
+        response = {"message": "Successful logout"};
+    }
+    res.json(response);
 }
-
 function loginUser(req, res) {
     let foundMatch = false;
     let body = req.swagger.params.user["value"];
@@ -76,6 +107,7 @@ function loginUser(req, res) {
         let current = userRepo.users[i];
         if(current.username == body.username && current.password == body.password){
             current.sessionID = Math.floor(Math.random() * 100)
+            userRepo.addActiveSessionId(current.sessionID);
             foundMatch = true;
             res.json({"message": "Successful login", "session_key": current.sessionID})
         }
